k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-webapp
  labels:
    app: devops-webapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: devops-webapp
  template:
    metadata:
      labels:
        app: devops-webapp
    spec:
      containers:
        - name: devops-webapp
          image: muhalwan/devops-webapp:latestc
          ports:
            - containerPort: 8000
