k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-webapp-service
spec:
  type: ClusterIP
  selector:
    app: devops-webapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
